# ChangeOnt

./: .container_sentinel.txt  .gitignore  .gittattributes  CHANGELOG.md  CITATION.cff  FROZEN.md  LICENSE.md  README.md  chatgpt_link.txt  populate_repo.py  pyproject.toml  repo_files.txt  repro_verify.ps1  requirements.txt  run_devcontainer.md
.devcontainer/: Dockerfile  ai_bootstrap.sh  devcontainer-lockdown.json  devcontainer.json  webonly-firewall.sh
.outputsbandit_stoa/: metrics.jsonl  progress.json
.outputsbandit_stoa_rerun/: metrics.jsonl
5. experiments/: seeds.yaml
8. docs/: BASELINES.md  CO_STRICT_RULES.md  EVALUATION.md  PREREG.md  SYMBOLS.md
9. scripts/: run_toy_ren.ps1  setup_dev.sh
Agents/: AGENTS.md  context.md
ChangeOntCode/: README.md  test.py
Theory of Change/: Symbol Map.md
TheoryOfChange/: Symbol_Map.md  anchors 1.md  anchors.md
baselines/: __init__.py
benchmarks/: __init__.py
core/: co_types.py  gauge.py  rm.py
docs/: BENCHMARKS.md  CO_ALGEBRA  CO_LOGIC.md  CO_MATH.md  CO_RECURSION_PROTOCOL.md  CO_STRICT_RULES.md  EVALUATION.md  FND0_IMMEDIATE_DATUM.md  FREEZE_STOA_bandit.md  FREEZE_STOA_maze.md  FREEZE_STOA_renewal_phase.md  HEADERS.md  KT_Handbook.md  LABELS.md  OVERVIEW.md  PREREG.md  ROADMAP.md  SPEC_CORE_A_TO_I.md  stoa_bandit.md  stoa_maze.md
environments/: __init__.py  common.py
evaluation/: __init__.py  invariance_test.py
experiments/: __init__.py  bandit.py  cli.py  eval.py  registry.py  run_experiment.py  suite_all.yaml  suite_cli.py  verify_cli.py
kernel/: invariance.py  io.py  logging.py  plotting.py  (+3 more)
(+2174 files in other folders)
